Fix footer gap issue

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  min-height: 105vh;
   background-color: #000;
   text-rendering: optimizeSpeed;
   user-select: none;
